fix layout issue with nav dropdown

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -10,7 +10,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.ui-menu-item{
+.ui-menu-item {
     z-index: 1500;
 }
 
@@ -29,7 +29,7 @@
     cursor: pointer;
 }
 
-#search{
+#search {
     height: 0;
 }
 
@@ -101,7 +101,7 @@
     border-radius: 0px;
 }
 .dropdown-menu li {
-    width: 30px;
+    width: 100%;
 }
 
 #navigation-dropdown-button {
